<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SunFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_sun"
        app:layout_constraintBottom_toTopOf="@id/rise_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/sun" />

    <TextView style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/rise_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rise_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_700"
        app:layout_constraintBottom_toTopOf="@id/rise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <RelativeLayout
        android:id="@+id/rise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dip"
        app:layout_constraintBottom_toTopOf="@id/set_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rise_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/time">

            </TextView>

            <TextView
                android:id="@+id/time_rise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/azimuth">

            </TextView>

            <TextView
                android:id="@+id/azimuth_rise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <TextView style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_700"
        app:layout_constraintBottom_toTopOf="@id/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rise" />

    <RelativeLayout
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dip"
        app:layout_constraintBottom_toTopOf="@id/dusk_dawn_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/time">

            </TextView>

            <TextView
                android:id="@+id/time_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/azimuth">

            </TextView>

            <TextView
                android:id="@+id/azimuth_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <TextView style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/dusk_dawn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dusk_dawn_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_700"
        app:layout_constraintBottom_toTopOf="@id/dusk_dawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set" />

    <RelativeLayout
        android:id="@+id/dusk_dawn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dusk_dawn_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/dusk">

            </TextView>

            <TextView
                android:id="@+id/time_dusk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/dawn">

            </TextView>

            <TextView
                android:id="@+id/time_dawn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>